static/css/course.css
.course-container {
  position: relative;
  left: 78px;
  height: 100vh;
  margin: 0 auto;
  width: 100%;
  padding: 30px;
  background-color: #121212;
}
.module-container {
  float: left;
  position: relative;
  background-color: #3333339d;
  min-height: 100%;
  width: 20%;
  padding: 15px;
  border-radius: 10px;
}
.module-item {
  margin: 10px;
  border-radius: 5px;
  height: 40px;
  background-color: #ccc5c5c0;
}
.module-item:hover {
  background-color: var(--orange);
}
.course-view {
  position: relative;
  display: inline-block;
  top: 0;
  padding: 25px;
  min-height: 100%;
  width: 72.5%;
  margin: auto 25px;
  background-color: #3333339d;
  border-radius: 10px;
}
.module-intro {
  width: 100%;
  height: 275px;
  text-align: center;
}
#module-intro-image {
  float: right;
  width: 50%;
  height: auto;
  margin-right: 10px;
}
.module.box {
  height: 800px;
  width: 40%;
  margin: auto 0;
}
.intro-title,
.module-title {
  font-weight: 900;
  font-variant: small-caps;
  color: white;
  font-size: 2.5rem;
}

.intro-description,
.module-content {
  margin-top: 5px;
  line-height: 26px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  hyphens: auto;
  color: white;
  width: 57.5%;
}
.module-list-intro {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 1.75rem;
  text-transform: capitalize;
  list-style: none;
  color: white;
  width: 20%;
  margin-bottom: 5px;
  height: 50px; 
  border-radius: 5px;
}
.course-view-intro {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 1.75rem;
  text-transform: capitalize;
  list-style: none;
  color: white;

}

.module-content-container {
  padding-top: 20px;
  clear: both;
}
hr {
  width: 95px;
}
.key-title {
  color: white;
  font-size: 1.5rem;
}

.keys {
  color: white;
}
.keys li {
  line-height: 30px;
  width: 100%;
}
.highlighted {
  background-color: var(--orange);
}
@media (max-width: 768px) {
  #module-intro-image {
    width: 100%;
  }
  .intro-title {
    font-size: 2.5rem;
    width: 100%;
  }
  .intro-description {
    width: 100%;
  }
  .module-container {
    height: 679.5px;
  }
  .module-item {
    height: 30px;
    margin: 0;
    margin-bottom: 15px;
  }
  .module-list {
    height: auto;
  }
  .course-container {
    position: absolute;
    left: 0;
    padding: 0;
    height: auto;
  }
  .sidebar {
    height: 100px;
  }
  .course-view {
    margin: 0;
    width: 80%;
    height: 100%;
  }
}
@media (max-width: 400px) {
  #module-intro-image {
    width: 50%;
  }
}

